package com.fges.todoapp;

/* Gère les erreurs et les affiche dans la console. */

public class ErreurManager {

    public static void printError(String message) {
        System.err.println(message);
    }
}
